--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,7 @@
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
   user-select: none;
+  background-color: rgba(0,0,0,.5);
 }
 
 /* Position the "next button" to the right */
@@ -36,7 +37,7 @@
 
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
+  background-color: rgba(0,0,0,0.3);
 }
 
 /* Caption text */
