--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,11 @@
 * {box-sizing:border-box}
 
+h1, .description {
+  margin: auto;
+  max-width: 500px;
+  color: rgba(0,0,0,.8)
+}
+
 /* Slideshow container */
 .slideshow-container {
   max-width: 500px;
